[package]
name = "Jomsole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.6"
pest_derive = "2.5.6"
log = "0.4.17"
whoami = "1.4.0"
toml = "0.7.3"

[dependencies.winsafe]
version = "0.0.14"
features = ["shell"]